bindings/r/src/wickra_exchange.h

/**
 * An opaque advanced-orders handle over a live client. Construct with
 * `wickra_connect_advanced`; release with `wickra_advanced_free`.
 */
typedef struct WickraAdvanced WickraAdvanced;
/**
 * An opaque derivatives handle over a live futures client. Construct with
 * `wickra_connect_derivatives`; release with `wickra_derivatives_free`.
 */
typedef struct WickraDerivatives WickraDerivatives;
/**
 * An opaque exchange handle. Construct with `wickra_paper_new` /
 * `wickra_replay_new` / `wickra_connect`; release with `wickra_exchange_free`.
 */
typedef struct WickraExchange WickraExchange;
/**
 * An opaque private user-data handle over a live client. Construct with
 * `wickra_connect_user_data`; release with `wickra_user_data_free`.
 */
typedef struct WickraUserData WickraUserData;
/**
 * An opaque WebSocket order-API handle over a live client. Construct with
 * `wickra_connect_ws_execution`; release with `wickra_ws_execution_free`.
 */
typedef struct WickraWsExecution WickraWsExecution;
/**
 * An order as reported by the exchange (C-ABI mirror of `Order`).
 */
typedef struct {
    /**
     * Venue order id, NUL-terminated (truncated to `WICKRA_STR_CAP - 1` bytes).
     */
    char id[WICKRA_STR_CAP];
    /**
     * `WICKRA_SIDE_*`.
     */
    int32_t side;
    /**
     * `WICKRA_STATUS_*`.
     */
    int32_t status;
    /**
     * Total ordered quantity.
     */
    double quantity;
    /**
     * Quantity filled so far.
     */
    double filled_quantity;
    /**
     * Limit price, or `NaN` if none.
     */
    double price;
    /**
     * Average fill price, or `NaN` if none.
     */
    double average_price;
} WickraOrder;
/**
 * A single stream event (C-ABI projection of `Event`).
 */
typedef struct {
    /**
     * `WICKRA_EVENT_*`.
     */
    int32_t kind;
    /**
     * Market symbol for trade/ticker events, NUL-terminated (empty otherwise).
     */
    char symbol[WICKRA_STR_CAP];
    /**
     * Price for trade/ticker events (`NaN` otherwise).
     */
    double price;
    /**
     * Quantity for trade events (`NaN` otherwise).
     */
    double quantity;
    /**
     * `WICKRA_SIDE_*` for trade events (`-1` otherwise).
     */
    int32_t side;
    /**
     * The order for `order_update` events.
     */
    WickraOrder order;
} WickraEvent;
/**
 * A derivatives position (C-ABI mirror of `Position`).
 */
typedef struct {
    /**
     * Market symbol, NUL-terminated (`base/quote`).
     */
    char symbol[WICKRA_STR_CAP];
    /**
     * `WICKRA_POSITION_*` (long / short).
     */
    int32_t side;
    /**
     * Position size in base units (magnitude, always positive).
     */
    double quantity;
    /**
     * Average entry price.
     */
    double entry_price;
    /**
     * Current mark price (may be `0` where the venue omits it).
     */
    double mark_price;
    /**
     * Account leverage for this position.
     */
    double leverage;
    /**
     * Unrealized PnL as reported by the venue.
     */
    double unrealized_pnl;
    /**
     * `WICKRA_MARGIN_*` (cross / isolated).
     */
    int32_t margin_mode;
} WickraPosition;
/**
 * The library version as a static NUL-terminated string.
 */
const char *wickra_version(void);
/**
 * Construct an offline paper account seeded from parallel `assets`/`amounts`
 * arrays (length `n_balances`). Returns null on invalid arguments.
 *
 * # Safety
 * The array pointers must be valid for `n_balances` elements (or null when it
 * is zero).
 */
WickraExchange *wickra_paper_new(const char *const *assets,
                                 const double *amounts,
                                 uintptr_t n_balances,
                                 double maker_bps,
                                 double taker_bps,
                                 double slippage_bps);
/**
 * Construct a replay account driven by a `tape` of `n_tape` trade prices for
 * `market`, filling a paper book seeded from `assets`/`amounts`. Returns null on
 * invalid arguments.
 *
 * # Safety
 * `market` must be a valid C string; the array pointers must be valid for their
 * stated lengths (or null when zero).
 */
WickraExchange *wickra_replay_new(const char *market,
                                  const double *tape,
                                  uintptr_t n_tape,
                                  const char *const *assets,
                                  const double *amounts,
                                  uintptr_t n_balances,
                                  double maker_bps,
                                  double taker_bps,
                                  double slippage_bps);
/**
 * Connect a live client for `name`, authenticated with the given credentials
 * (`passphrase`/`private_key` may be null). Returns null on failure.
 *
 * # Safety
 * The non-null string arguments must be valid C strings.
 */
WickraExchange *wickra_connect(const char *name,
                               const char *api_key,
                               const char *api_secret,
                               const char *passphrase,
                               const char *private_key,
                               bool testnet);
/**
 * Release an exchange handle. Safe to call with null.
 *
 * # Safety
 * `handle` must be null or a pointer returned by a `wickra_*_new` / `wickra_connect`
 * constructor, freed exactly once.
 */
void wickra_exchange_free(WickraExchange *handle);
/**
 * Write the venue name into `out` (capacity `cap`, always NUL-terminated).
 *
 * # Safety
 * `handle` must be valid; `out` must be writable for `cap` bytes.
 */
int32_t wickra_exchange_name(const WickraExchange *handle, char *out, uintptr_t cap);
/**
 * Set the mark price a paper account fills against (paper backend only).
 *
 * # Safety
 * `handle` must be valid; `market` must be a valid C string.
 */
int32_t wickra_exchange_set_price(WickraExchange *handle, const char *market, double price);
/**
 * Place a market order (`side` is `WICKRA_SIDE_*`); writes the resulting order
 * into `out`.
 *
 * # Safety
 * `handle` and `out` must be valid; `market` must be a valid C string.
 */
int32_t wickra_exchange_place_market(WickraExchange *handle,
                                     const char *market,
                                     int32_t side,
                                     double quantity,
                                     WickraOrder *out);
/**
 * Place a limit order (`side` is `WICKRA_SIDE_*`) at `price`; writes the
 * resulting order into `out`.
 *
 * # Safety
 * `handle` and `out` must be valid; `market` must be a valid C string.
 */
int32_t wickra_exchange_place_limit(WickraExchange *handle,
                                    const char *market,
                                    int32_t side,
                                    double quantity,
                                    double price,
                                    WickraOrder *out);
/**
 * Cancel an open order by venue id.
 *
 * # Safety
 * `handle` must be valid; `market` and `order_id` must be valid C strings.
 */
int32_t wickra_exchange_cancel(WickraExchange *handle, const char *market, const char *order_id);
/**
 * Write the free balance of `asset` into `*out_free`.
 *
 * # Safety
 * `handle` and `out_free` must be valid; `asset` must be a valid C string.
 */
int32_t wickra_exchange_balance(WickraExchange *handle, const char *asset, double *out_free);
/**
 * Drain buffered events into `out` (capacity `cap`). Returns the number written
 * (`>= 0`) or a negative error code.
 *
 * # Safety
 * `handle` must be valid; `out` must be writable for `cap` elements.
 */
int32_t wickra_exchange_poll(WickraExchange *handle, WickraEvent *out, uintptr_t cap);
/**
 * Connect a live **derivatives** (USDⓈ-M futures) client for `name`, returning
 * an opaque [`WickraDerivatives`] handle (positions / leverage / margin / close).
 * Returns null on failure or for a spot-only venue (`coinbase`, `upbit`).
 *
 * # Safety
 * The non-null string arguments must be valid C strings.
 */
WickraDerivatives *wickra_connect_derivatives(const char *name,
                                              const char *api_key,
                                              const char *api_secret,
                                              const char *passphrase,
                                              const char *private_key,
                                              bool testnet);
/**
 * Release a derivatives handle. Safe to call with null.
 *
 * # Safety
 * `handle` must be null or a pointer from `wickra_connect_derivatives`, freed
 * exactly once.
 */
void wickra_derivatives_free(WickraDerivatives *handle);
/**
 * Write the open position in `market` into `out`. Returns
 * [`WICKRA_ERR_NOT_FOUND`] if the position is flat.
 *
 * # Safety
 * `handle` and `out` must be valid; `market` must be a valid C string.
 */
int32_t wickra_derivatives_position(WickraDerivatives *handle,
                                    const char *market,
                                    WickraPosition *out);
/**
 * List every open position into `out` (capacity `cap`). Pass a `market` C
 * string to scope to one symbol, or null for all. Returns the total number of
 * open positions (`>= 0`) or a negative error code; when the return exceeds
 * `cap` the buffer was truncated — re-call with a larger buffer.
 *
 * # Safety
 * `handle` must be valid; `market` must be null or a valid C string; `out` must
 * be writable for `cap` elements.
 */
int32_t wickra_derivatives_positions(WickraDerivatives *handle,
                                     const char *market,
                                     WickraPosition *out,
                                     uintptr_t cap);
/**
 * Set the leverage for `market`.
 *
 * # Safety
 * `handle` must be valid; `market` must be a valid C string.
 */
int32_t wickra_derivatives_set_leverage(WickraDerivatives *handle,
                                        const char *market,
                                        uint32_t leverage);
/**
 * Set the margin mode for `market` (`mode` is `WICKRA_MARGIN_*`).
 *
 * # Safety
 * `handle` must be valid; `market` must be a valid C string.
 */
int32_t wickra_derivatives_set_margin_mode(WickraDerivatives *handle,
                                           const char *market,
                                           int32_t mode);
/**
 * Flatten the open position in `market` with a reduce-only market order; writes
 * the resulting order into `out`.
 *
 * # Safety
 * `handle` and `out` must be valid; `market` must be a valid C string.
 */
int32_t wickra_derivatives_close_position(WickraDerivatives *handle,
                                          const char *market,
                                          WickraOrder *out);
/**
 * Connect a live client for `name` as an advanced-orders handle (amend / batch
 * cancel). `futures` selects the USDⓈ-M futures market. Returns null on failure
 * or for a venue without an advanced-order surface (`coinbase`, `upbit`).
 *
 * # Safety
 * The non-null string arguments must be valid C strings.
 */
WickraAdvanced *wickra_connect_advanced(const char *name,
                                        const char *api_key,
                                        const char *api_secret,
                                        const char *passphrase,
                                        const char *private_key,
                                        bool testnet,
                                        bool futures);
/**
 * Release an advanced-orders handle. Safe to call with null.
 *
 * # Safety
 * `handle` must be null or a pointer from `wickra_connect_advanced`, freed
 * exactly once.
 */
void wickra_advanced_free(WickraAdvanced *handle);
/**
 * Amend a resting order's price and/or quantity in place; writes the refreshed
 * order into `out`. Pass `NaN` for `new_price` / `new_quantity` to leave that
 * field unchanged. Returns [`WICKRA_ERR_UNSUPPORTED`] on a venue without a
 * native amend.
 *
 * # Safety
 * `handle` and `out` must be valid; `market` and `order_id` must be valid C strings.
 */
int32_t wickra_advanced_amend_order(WickraAdvanced *handle,
                                    const char *market,
                                    const char *order_id,
                                    double new_price,
                                    double new_quantity,
                                    WickraOrder *out);
/**
 * Cancel several orders on `market` in one request. `order_ids` is an array of
 * `n` NUL-terminated C strings.
 *
 * # Safety
 * `handle` must be valid; `market` must be a valid C string; `order_ids` must
 * point to `n` valid C strings (or be null when `n == 0`).
 */
int32_t wickra_advanced_cancel_batch(WickraAdvanced *handle,
                                     const char *market,
                                     const char *const *order_ids,
                                     uintptr_t n);
/**
 * Place a one-cancels-other bracket on `market`: a take-profit limit leg at
 * `price` paired with a stop leg triggered at `stop_price`. A finite
 * `stop_limit_price` makes the stop leg a stop-limit; `NaN` leaves it a
 * stop-market. The resulting legs are written into `out` (capacity `cap`);
 * returns the number of legs placed (`>= 0`, typically 2) or a negative error
 * code. When the return exceeds `cap` the buffer was truncated.
 *
 * # Safety
 * `handle` must be valid; `market` must be a valid C string; `out` must be
 * writable for `cap` elements.
 */
int32_t wickra_advanced_place_oco(WickraAdvanced *handle,
                                  const char *market,
                                  int32_t side,
                                  double quantity,
                                  double price,
                                  double stop_price,
                                  double stop_limit_price,
                                  WickraOrder *out,
                                  uintptr_t cap);
/**
 * Place several orders in one request. The `n` orders are described by parallel
 * arrays: `markets[i]` (C string), `sides[i]` (`WICKRA_SIDE_*`), `quantities[i]`,
 * and `prices[i]` (finite for a limit order, `NaN` for market). Each order's
 * outcome is written into `out[i]` and its per-order status into `out_codes[i]`
 * (`WICKRA_OK` on success, else a negative error code with `out[i]` left empty).
 * Returns the number of results written (`>= 0`, capped at `cap`) or a negative
 * error code for a whole-request failure.
 *
 * # Safety
 * `handle` must be valid; `markets`/`sides`/`quantities`/`prices` must each
 * point to `n` valid elements; `out` and `out_codes` must be writable for `cap`
 * elements.
 */
int32_t wickra_advanced_place_batch(WickraAdvanced *handle,
                                    const char *const *markets,
                                    const int32_t *sides,
                                    const double *quantities,
                                    const double *prices,
                                    uintptr_t n,
                                    WickraOrder *out,
                                    int32_t *out_codes,
                                    uintptr_t cap);
/**
 * Connect a private user-data client for `name`. `futures` selects the USDⓈ-M
 * futures market. Returns null for an unknown / spot-only venue or bad UTF-8.
 *
 * # Safety
 * The string arguments must be null or valid NUL-terminated C strings.
 */
WickraUserData *wickra_connect_user_data(const char *name,
                                         const char *api_key,
                                         const char *api_secret,
                                         const char *passphrase,
                                         const char *private_key,
                                         bool testnet,
                                         bool futures);
/**
 * Release a user-data handle. Safe to call with null.
 *
 * # Safety
 * `handle` must be null or a pointer from `wickra_connect_user_data`, freed
 * exactly once.
 */
void wickra_user_data_free(WickraUserData *handle);
/**
 * Open the private user-data stream. Afterwards `wickra_user_data_poll` also
 * drains the account's own order/balance events.
 *
 * # Safety
 * `handle` must be valid.
 */
int32_t wickra_user_data_subscribe(WickraUserData *handle);
/**
 * Drain buffered user-data events into `out` (capacity `cap`). Returns the
 * number written (`>= 0`) or a negative error code.
 *
 * # Safety
 * `handle` must be valid; `out` must be writable for `cap` elements.
 */
int32_t wickra_user_data_poll(WickraUserData *handle, WickraEvent *out, uintptr_t cap);
/**
 * Connect a WebSocket order-API client for `name`. `futures` selects the USDⓈ-M
 * futures market. Returns null for an unknown / spot-only venue or bad UTF-8.
 *
 * # Safety
 * The string arguments must be null or valid NUL-terminated C strings.
 */
WickraWsExecution *wickra_connect_ws_execution(const char *name,
                                               const char *api_key,
                                               const char *api_secret,
                                               const char *passphrase,
                                               const char *private_key,
                                               bool testnet,
                                               bool futures);
/**
 * Release a ws-execution handle. Safe to call with null.
 *
 * # Safety
 * `handle` must be null or a pointer from `wickra_connect_ws_execution`, freed
 * exactly once.
 */
void wickra_ws_execution_free(WickraWsExecution *handle);
/**
 * Place an order over the WebSocket order API; writes the resulting order into
 * `out`. A `NaN` `price` places a market order, a finite value a limit order.
 *
 * # Safety
 * `handle` and `out` must be valid; `market` must be a valid C string.
 */
int32_t wickra_ws_place_order(WickraWsExecution *handle,
                              const char *market,
                              int32_t side,
                              double quantity,
                              double price,
                              WickraOrder *out);
/**
 * Cancel an order over the WebSocket order API by venue id.
 *
 * # Safety
 * `handle` must be valid; `market` and `order_id` must be valid C strings.
 */
int32_t wickra_ws_cancel_order(WickraWsExecution *handle, const char *market, const char *order_id);